--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://100.26.58.129:3306/learncrud
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${MYSQL_HOST}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PWD}
