--- a/argocd/test-nginx-app.yaml
+++ b/argocd/test-nginx-app.yaml
@@ -29,6 +29,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: httpd
+        image: nginx
         ports:
         - containerPort: 80
